# controlling-a-robot-formation-to-collaboratively-move-an-object

./: .gitignore  README.md
install/: .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
install/share/iris_algorithm/cmake/: iris_algorithmConfig.cmake
install/share/snopt_cpp/cmake/: snopt_cppConfig.cmake
install/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/scripts/: add_two_ints_client.py  add_two_ints_server.py  send_goal.py  send_set_of_goals.py  test_node.py
src/beginner_tutorials/src/: talker.cpp
src/global_path_planning/: CMakeLists.txt  package.xml
src/global_path_planning/config/: global.json  global_path.json
src/global_path_planning/launch/: global_path_planner.launch
src/global_path_planning/scripts/: bidijkstra.py  bidirectional_BFS.py  global_path_planning.py  planning_functions.py  plot_formation.py  plot_formation_without_node.py  plot_global_path.py  shortest_path.py  snopt.py  test.py
src/global_path_planning/src/: bidirectional_dijkstra.cpp  formation.cpp
src/iris_algorithm/: CMakeLists.txt  package.xml
src/iris_algorithm/scripts/: map_v5.pgm  plot_formation_without_node.py  test_iris_2d.py  test_iris_pub.py
src/local_motion_planning/: CMakeLists.txt  package.xml
src/local_motion_planning/msg/: DynamicObstacle.msg  DynamicObstacles.msg  OptimalConfiguration.msg
src/local_motion_planning/scripts/: aaaa.py  goal_manager.py  goal_to_amcl_simulator.py  local_motion_planning.py  local_motion_planning_simulation.py  person_detector.py  planning_functions.py  plot_local_path.py
src/rplidar_ros/src/: node.cpp
src/snopt_cpp/: CMakeLists.txt  package.xml
src/snopt_cpp/config/: global.json
src/snopt_cpp/scripts/: bidirectional_astart.py  call_formation.py  global_path_planning.py
src/snopt_cpp/src/: formation.cpp  sntest.cpp  sntest_sub.cpp  sntoya.cpp
(+24 files in other folders)
